--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
       <!-- Profile Start -->
       <div class="row mt-5">
         <div class="col-md-3 col-sm-12 pb-3 text-md-right text-center">
-          <img class="img-fluid rounded profile-img" src="./static/image/profile_2019.png" alt="Profile">
+          <!-- <img class="img-fluid rounded profile-img" src="./static/image/profile_2019.png" alt="Profile"> -->
         </div>
         <div class="col-md-9 col-sm-12">
           <div class="row">
             <div class="col text-center text-md-left">
-              <h1 class="blue">유 용 우 <small>(요우)</small></h1>
+              <h1 class="blue">박성언<small>(DAME)</small></h1>
             </div>
           </div>
           <div class="row">
@@ -57,7 +57,7 @@
                   <i class="fa fa-envelope" aria-hidden="true"></i>
                 </div>
                 <div class="col-auto">
-                  <a href="mailto:me@yowu.dev" target="_blank">me@yowu.dev</a>
+                  <a href="lklkklkl@naver.com" target="_blank">lklkklkl@naver.com</a>
                 </div>
               </div>
               <div class="row pb-2">
@@ -65,7 +65,7 @@
                   <i class="fa fa-phone" aria-hidden="true"></i>
                 </div>
                 <div class="col-auto">
-                  <span class="badge badge-light">Please contact me by email</span>
+                  <span class="badge badge-light">010-2321-3725</span>
                 </div>
               </div>
               <div class="row pb-2">
@@ -73,7 +73,7 @@
                   <i class="fa fa-github" aria-hidden="true"></i>
                 </div>
                 <div class="col-auto">
-                  <a href="https://github.com/uyu423" target="_blank">https://github.com/uyu423</a>
+                  <a href="https://github.com/paul3569" target="_blank">https://github.com/paul3569</a>
                 </div>
               </div>
               <div class="row pb-2">
@@ -103,7 +103,7 @@
             </div>
           </div>
         </div>
-      </div >
+      </div>
       <!-- Profile End -->
 
       <!-- Introduce Start -->
@@ -115,13 +115,14 @@
           <p>웹 백엔드 개발과 스타트업 개발자로서의 다양한 경험이 있습니다. Node.js, PHP, MySQL, Redis, AWS, Git, Linux 등을 사용하여 프로덕션 서비스를 설계, 개발, 운영한 경험이 있습니다.확장성과 유지 보수성이 높은 백엔드 아키텍처와 패턴을 위해 언제나 고민하고 있습니다.</p>
           <p>오픈소스 프로젝트에 관심이 많고, 다양한 방법으로 기여를 하려고 노력하고 있습니다. 이외에도 개인 프로젝트나 개발 커뮤니티 활동 등을 통해 다양한 개발 경험을 즐기고 있습니다. 평소 개발 경험을 공유하거나 기록하는 것을 좋아하여 학부생 시절부터 시작한 개발 블로그에는 350여 개의 기술 포스트를 작성했습니다. 언제나 백엔드 개발의 정점을 찍고 싶다고 생각하고 있으며 다양한 기술을 학습하거나 사용하고 있습니다.</p>
           <p>서비스 개발이란 결국 개발과 비즈니스와의 커뮤니케이션이 가장 중요하다고 생각하고 있습니다. 능동적이고 적극적인 커뮤니케이션으로 문제 해결과 비즈니스 발전을 위해 뛰어듭니다. 이러한 점을 바탕으로 더 좋은 개발자로서 성장하기 위해 더 치열하게 학습하고, 경험하고, 노력하고 있습니다.</p>
-          <p class="text-md-right"><small>Latest Resume Updated</small> <sapn class="badge badge-secondary">2019. 07. 24</span></p>
-          <p class="text-md-right">Yu Yongwoo</p>
+          <p class="text-md-right"><small>Latest Resume Updated</small> <span class="badge badge-secondary">2025. 01. 01</span></p>
+          <p class="text-md-right">Park SungEon</p>
         </div>
       </div>
       <!-- Introduce End -->
 
       <!-- Skills Start -->
+       <!--
       <div class="row pt-5">
         <div class="col">
           <div class="row pb-3">
@@ -301,7 +302,7 @@
           </div>
 
         </div>
-      </div>
+      </div>-->
       <!-- Skills End -->
 
       <!-- Open Source Start -->
@@ -469,40 +470,41 @@
                 <div class="col-md-3 col-12 text-md-right">
                   <div class="row">
                     <div class="col-md-12 col">
-                      <h4 class="gray">2016. 10 ~ 2017. 11<br /></h4>
+                      <h4 class="gray">2023. 03 ~ 2023. 11<br /></h4>
                     </div>
                     <div class="col-md-12 col-3 text-center text-md-right">
-                        <span class="badge badge-info">1년 2개월</span>
+                        <span class="badge badge-info">9개월</span>
                     </div>
                   </div>
                 </div>
                 <div class="col-md-9 col-12">
-                  <h4>플레이팅 (Plating)</h4>
-                  <i class="gray">개발팀 백엔드 개발자</i>
+                  <h4>쎌바이오텍 유지보수 및 개발</h4>
+                  <i class="gray">분석 / 개발</i>
                   <ul class="pt-3">
-                    <li>요식업 / 푸드테크 스타트업 <small>(15~50명, 개발팀 2~6명)</small></li>
-                    <li>커머스, 물류 백엔드, 인프라 개발 등</li>
-                    <li>Development Project Management</li>
+                    <li>유지보수 및 고도화<small>(운영 2명)</small></li>
+                    <li>admin 비밀번호 정책에 따른 비밀번호 변경 안내 로직 구현현</li>
+                    <li>락토클리어 이니시스 결제 취소 및 에스크로 결제 구현현</li>
+                    <li>듀오락 상품 정보 전송 빅인 api 개발 및 spring batch 연동</li>
                     <li><strong>Skill Keywords</strong></li>
                     <div>
-                      <span class="badge badge-secondary">Node.js</span>
-                      <span class="badge badge-secondary">express.js</span>
-                      <span class="badge badge-secondary">PHP</span>
-                      <span class="badge badge-secondary">Laravel</span>
-                      <span class="badge badge-secondary">React.js</span>
-                      <span class="badge badge-secondary">Redux</span>
-                      <span class="badge badge-secondary">MySQL</span>
-                      <span class="badge badge-secondary">Amazon Web Serivce</span>
-                      <span class="badge badge-secondary">MongoDB</span>
-                      <span class="badge badge-secondary">Socket.io</span>
-                      <span class="badge badge-secondary">nginx</span>
-                      <span class="badge badge-secondary">API Design</span>
-                      <span class="badge badge-secondary">Database Design</span>
-                      <span class="badge badge-secondary">Infrastructure Architecture</span>
-                      <span class="badge badge-secondary">API Design</span>
-                      <span class="badge badge-secondary">Domain Driven Design</span>
-                      <span class="badge badge-secondary">Test Driven Design</span>
-                      <span class="badge badge-secondary">Project Management</span>
+                      <span class="badge badge-secondary">spring boot</span>
+                      <span class="badge badge-secondary">e-Gov Framework</span>
+                      <span class="badge badge-secondary">Java</span>
+                      <span class="badge badge-secondary">Jstl</span>
+                      <span class="badge badge-secondary">Html</span>
+                      <span class="badge badge-secondary">css</span>
+                      <span class="badge badge-secondary">javascript</span>
+                      <span class="badge badge-secondary">jquery</span>
+                      <span class="badge badge-secondary">mysql</span>
+                      <!-- <span class="badge badge-secondary">Socket.io</span> -->
+                      <!-- <span class="badge badge-secondary">nginx</span> -->
+                      <!-- <span class="badge badge-secondary">API Design</span> -->
+                      <!-- <span class="badge badge-secondary">Database Design</span> -->
+                      <!-- <span class="badge badge-secondary">Infrastructure Architecture</span> -->
+                      <!-- <span class="badge badge-secondary">API Design</span> -->
+                      <!-- <span class="badge badge-secondary">Domain Driven Design</span> -->
+                      <!-- <span class="badge badge-secondary">Test Driven Design</span> -->
+                      <!-- <span class="badge badge-secondary">Project Management</span> -->
                     </div>
                   </ul>
                 </div>
@@ -620,14 +622,38 @@
 
               <div class="row">
                 <div class="col-md-3 col-12 text-md-right">
-                  <h4 class="gray">2019. 02 ~ 2019. 04</h4>
+                  <h4 class="gray">2023. 03 ~ 2023. 11</h4>
                 </div>
                 <div class="col-md-9 col-12">
-                  <h4>AWS 인프라 재정비 / ISMS 심사 보조</h4>
-                  <i class="gray">Yanolja</i>
+                  <h4>쎌바이오텍 유지보수 및 개발</h4>
+                  <i class="gray">Plating</i>
                   <ul class="pt-3">
                     <li>
-                      TBD
+                      <strong>API Server v1 / v2</strong>
+                      <ul>
+                        <li>플레이팅 서비스에 사용되는 API 서버 개발</li>
+                        <li>기존 PHP로 작성된 v1 API를 Node.js와 Express.js로 이전 및 기능 추가, 코드 개선</li>
+                        <li>API v2 부터 TDD, ORM 등 도입</li>
+                        <li>AWS EC2, pm2, nginx를 서버 인프라로 사용</li>
+                        <li>AWS RDS의 MySQL를 데이터베이스로 사용</li>
+                      </ul>
+                    </li>
+                    <li>
+                      <strong>Socket Server</strong>
+                      <ul>
+                        <li>주문 관련 백오피스에 사용되는 소켓 서버 개발</li>
+                        <li>Node.js와 Socket.io, Express.js를 사용하여 개발</li>
+                        <li>AWS EC2 내의 MongoDB를 데이터베이스로 사용</li>
+                      </ul>
+                    </li>
+                    <li>
+                      <strong>Etc</strong>
+                      <ul>
+                        <li>Cron 역할을 하는 백엔드 프로젝트 개발</li>
+                        <li>Telegram Bot 등 마케팅 지표를 팀에게 능동적으로 알려줄 수 있는 서비스를 개발</li>
+                        <li>HTTP 통신으로 작동하는 가격 계산 서버 개발</li>
+                        <li>AWS S3, CloudFront 등을 사용하여 CDN 구축 </li>
+                      </ul>
                     </li>
                   </ul>
                 </div>
