fix: 레포 이름 변경경

--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
                     <li>IB 고도화 프로젝트 참여 (신규 보고서 개발)<small> (개발 3명)</small></li>
                     <li>RMS 시스템 유지보수</li>
                     <li>서버 관리 및 쿼리 튜닝</li>
-                    <li>인프라 및 Oracle 데이터베이스 유지보수 및 관리</li>
+                    <li>인프라, Oracle 데이터베이스 유지보수 및 관리</li>
                     <li><strong>Skill Keywords</strong></li>
                     <div>
                       <span class="badge badge-secondary">spring Framework</span>
