fix: 자격증/정보처리기사 추가가

--- a/index.html
+++ b/index.html
@@ -853,7 +853,19 @@
             </div>
           </div>
 
+            <div class="row">
+              <div class="col">
+                <div class="row">
+                  <div class="col-md-3 col-12 text-md-right">
+                    <h4 class="gray">2025. 05</h4>
+                  </div>
+                  <div class="col-md-9 col-12">
+                    <h4>정보처리기사(필기)</h4>
+                    <i class="gray">한국산업인력공단</i>
+                  </div>
+                </div>
 
+                <hr />
               <div class="row">
                 <div class="col">
                   <div class="row">
