--- a/index.html
+++ b/index.html
@@ -118,7 +118,13 @@
           <p>오픈소스 프로젝트에 관심이 많고, 다양한 방법으로 기여를 하려고 노력하고 있습니다. 이외에도 개인 프로젝트나 개발 커뮤니티 활동 등을 통해 다양한 개발 경험을 즐기고 있습니다. 평소 개발 경험을 공유하거나 기록하는 것을 좋아하여 학부생 시절부터 시작한 개발 블로그에는 350여 개의 기술 포스트를 작성했습니다. 언제나 백엔드 개발의 정점을 찍고 싶다고 생각하고 있으며 다양한 기술을 학습하거나 사용하고 있습니다.</p>
           <p>서비스 개발이란 결국 개발과 비즈니스와의 커뮤니케이션이 가장 중요하다고 생각하고 있습니다. 능동적이고 적극적인 커뮤니케이션으로 문제 해결과 비즈니스 발전을 위해 뛰어듭니다. 이러한 점을 바탕으로 더 좋은 개발자로서 성장하기 위해 더 치열하게 학습하고, 경험하고, 노력하고 있습니다.</p> -->
         <p>안녕하세요. 총 경력 3년 3개월 자바 개발자 박성언 입니다.</p>
-        </p>회사 재직 전, KOSMO라는 국비지원 코딩 학원을 다녔으며, Java 기반 Spring FW, HTML, CSS, JS, jQuery, React, 오라클을 이용한 SQL, Android, 파이썬 등을 학습하였습니다.</p>
+        <p>저는 다양한 금융·이커머스·공공·기업 프로젝트 경험을 바탕으로 실제 비즈니스 가치와 시스템 안정화에 기여해온 개발자입니다. 단순히 요구 기능을 구현하는 것을 넘어, 서비스의 품질과 확장성에 초점을 맞춰 안정적인 시스템을 만드는 데 보람을 느낍니다.</p>
+          <p>유지보수/고도화 프로젝트를 다수 수행하며 서비스 장애, 성능 이슈, 운영 효율 등 다양한 문제를 직접 해결했습니다. 특히 대규모 배치, DB 튜닝, 서버 인프라 개선 등 핵심적인 환경 이슈를 실제로 다루면서, 변화하는 현장 요구에 유연하게 대응해왔습니다. 새로운 기술 도입이 필요한 경우 빠르게 습득해 팀에 적용한 경험도 있습니다.</p>
+          <p>기획, 디자인, 인프라 등 다양한 직군과 협업하며, 명확한 커뮤니케이션을 통해 요구사항을 효율적으로 분석·수정하고, 개발과 운영의 전 과정을 리딩했습니다. 문제 발생 시 빠른 파악·공유로 팀 전체의 신뢰를 얻었고, 고객 또는 타 부서의 의견과 기술적 해결책을 효과적으로 연결해 성공적으로 프로젝트를 완수했습니다.</p>
+          <p>기술 트렌드 변화에 지속적으로 주목하며, 자신의 성장뿐 아니라 함께 일하는 동료, 그리고 고객의 성공에도 기여하고 싶습니다. 모든 프로젝트는 ‘더 좋은 코드, 더 높은 가치를 만든다’는 신념으로 임합니다. 도전과 변화에 주저하지 않는 자세와, 마지막까지 책임지는 성실함이 저를 성장시키는 원동력이라 확신합니다.</p>
+          <p>앞으로도 실질적인 성과와 협력으로 조직의 성장에 기여하는 개발자로 한 단계 더 도약하겠습니다.</p>
+          <p>감사합니다.</p>
+        <!--<p>회사 재직 전, KOSMO라는 국비지원 코딩 학원을 다녔으며, Java 기반 Spring FW, HTML, CSS, JS, jQuery, React, 오라클을 이용한 SQL, Android, 파이썬 등을 학습하였습니다.</p>
         <p>2년 반이라는 시간동안 위즈컨이라는 회사에 재직하면서 많은 프로젝트를 경험하였고 실력을 쌓았습니다.</p>
         <p>굿네이버스 고객사와 spring 기반 해외결연아동 시스템 유지보수 및 개발을 진행했습니다. JavaScript를 비롯한 jQuery, JQgrid를 이용한 리스트 생성, tibero를 이용한 db구축, Kotiln 언어와 SQLLite db를 사용하여 Android 앱 유지보수 및 개발을 진행했습니다.</p>
         <p>종근당 고객사와 java기반 app인 m-office와 java 기반 도매 웹 발주 유지보수 및 개발을 진행했습니다. 안드로이드 app의 java언어로 개발하는 경험을 하였고, java로만 이루어진 project를 경험하여 더욱 기본기를 쌓을 수 있었습니다. 또 SAP 과의 연동을 통해 시야를 넓혔고 삼성페이 개발 등 새로운 기능 개발로 실력이 향상되었습니다.</p>
@@ -126,7 +132,7 @@
         <p>쎌바이오택 고객사와 여러 프로젝트를 진행하며, spring boot와 전자정부 프레임워크를 학습하였고 빅인api, 이니시스 결제 등 외부 업체와 교류하며 api 를 생성하고 활용하는 등 여러 기능들을 수행하며 많은 경험을 쌓았고 실력이 상승하였습니다.</p>
         <p>유로인스트투먼츠라는 회사에서는 짧은 기간이였지만 금융권에 대한 도메인 지식과 리스크 시스템을 이해하고 작은 프로젝트이지만 프로젝트를 요건 정의 부터 완료 보고까지 모든 과정에 참여해여 전체적인 프로젝트 흐름을 이해하였습니다.</p>
         <p>저는 항상 개발에 있어서 재미를 느끼고 도전적입니다. 여러 경험들을 통해서 실력을 키우고, 여러 사람들과 소통하고 싶습니다.</p>
-        <p>감사합니다.</p>
+        <p>감사합니다.</p>-->
           <p class="text-md-right"><small>Latest Resume Updated</small> <span class="badge badge-secondary">2025. 01. 01</span></p>
           <p class="text-md-right">Park SungEon</p>
         </div>
