--- a/index.html
+++ b/index.html
@@ -117,14 +117,19 @@
           <!-- <p>웹 백엔드 개발과 스타트업 개발자로서의 다양한 경험이 있습니다. Node.js, PHP, MySQL, Redis, AWS, Git, Linux 등을 사용하여 프로덕션 서비스를 설계, 개발, 운영한 경험이 있습니다.확장성과 유지 보수성이 높은 백엔드 아키텍처와 패턴을 위해 언제나 고민하고 있습니다.</p>
           <p>오픈소스 프로젝트에 관심이 많고, 다양한 방법으로 기여를 하려고 노력하고 있습니다. 이외에도 개인 프로젝트나 개발 커뮤니티 활동 등을 통해 다양한 개발 경험을 즐기고 있습니다. 평소 개발 경험을 공유하거나 기록하는 것을 좋아하여 학부생 시절부터 시작한 개발 블로그에는 350여 개의 기술 포스트를 작성했습니다. 언제나 백엔드 개발의 정점을 찍고 싶다고 생각하고 있으며 다양한 기술을 학습하거나 사용하고 있습니다.</p>
           <p>서비스 개발이란 결국 개발과 비즈니스와의 커뮤니케이션이 가장 중요하다고 생각하고 있습니다. 능동적이고 적극적인 커뮤니케이션으로 문제 해결과 비즈니스 발전을 위해 뛰어듭니다. 이러한 점을 바탕으로 더 좋은 개발자로서 성장하기 위해 더 치열하게 학습하고, 경험하고, 노력하고 있습니다.</p> -->
-        <p>안녕하세요. </p>
+        <!-- <p>안녕하세요. </p>
         <P>총 경력 3년 3개월 자바 개발자 박성언 입니다.</p>
         <p>저는 다양한 금융·이커머스·공공·기업 프로젝트 경험을 바탕으로 실제 비즈니스 가치와 시스템 안정화에 기여해온 개발자입니다. 단순히 요구 기능을 구현하는 것을 넘어, 서비스의 품질과 확장성에 초점을 맞춰 안정적인 시스템을 만드는 데 보람을 느낍니다.</p>
         <p>유지보수/고도화 프로젝트를 다수 수행하며 서비스 장애, 성능 이슈, 운영 효율 등 다양한 문제를 직접 해결했습니다. 특히 대규모 배치, DB 튜닝, 서버 인프라 개선 등 핵심적인 환경 이슈를 실제로 다루면서, 변화하는 현장 요구에 유연하게 대응해왔습니다. 새로운 기술 도입이 필요한 경우 빠르게 습득해 팀에 적용한 경험도 있습니다.</p>
         <p>기획, 디자인, 인프라 등 다양한 직군과 협업하며, 명확한 커뮤니케이션을 통해 요구사항을 효율적으로 분석·수정하고, 개발과 운영의 전 과정을 리딩했습니다. 문제 발생 시 빠른 파악·공유로 팀 전체의 신뢰를 얻었고, 고객 또는 타 부서의 의견과 기술적 해결책을 효과적으로 연결해 성공적으로 프로젝트를 완수했습니다.</p>
         <p>기술 트렌드 변화에 지속적으로 주목하며, 자신의 성장뿐 아니라 함께 일하는 동료, 그리고 고객의 성공에도 기여하고 싶습니다. 모든 프로젝트는 ‘더 좋은 코드, 더 높은 가치를 만든다’는 신념으로 임합니다. 도전과 변화에 주저하지 않는 자세와, 마지막까지 책임지는 성실함이 저를 성장시키는 원동력이라 확신합니다.</p>
         <p>앞으로도 실질적인 성과와 협력으로 조직의 성장에 기여하는 개발자로 한 단계 더 도약하겠습니다.</p>
-        <p>감사합니다.</p>
+        <p>감사합니다.</p> -->
+        <br><br>
+        <p style="font-weight: bold;">3년 3개월 동안 금융, 이커머스, 공공 등 다양한 산업 분야에서 Java 기반의 대규모 백엔드 시스템 개발과 고도화를 경험했습니다. 대규모 배치, DB 튜닝, 인프라 개선 등 핵심 기술 과제 해결에 직접 참여했으며, 여러 직군과의 협업 및 팀 리딩 경험도 갖추고 있습니다. </p>
+        <p style="font-weight: bold;">Spring Boot와 Oracle을 활용한 DB 성능 개선 및 신속한 장애 대응을 통해 서비스의 안정성과 운영 효율성 향상에 기여해 왔으며,팀 내외 커뮤니케이션과 기술 리딩, 그리고 데이터 기반의 문제 해결 능력을 갖춘 주도적인 개발자입니다.</p>
+        <p style="font-weight: bold;"></p>
+        <br>
         <!--<p>회사 재직 전, KOSMO라는 국비지원 코딩 학원을 다녔으며, Java 기반 Spring FW, HTML, CSS, JS, jQuery, React, 오라클을 이용한 SQL, Android, 파이썬 등을 학습하였습니다.</p>
         <p>2년 반이라는 시간동안 위즈컨이라는 회사에 재직하면서 많은 프로젝트를 경험하였고 실력을 쌓았습니다.</p>
         <p>굿네이버스 고객사와 spring 기반 해외결연아동 시스템 유지보수 및 개발을 진행했습니다. JavaScript를 비롯한 jQuery, JQgrid를 이용한 리스트 생성, tibero를 이용한 db구축, Kotiln 언어와 SQLLite db를 사용하여 Android 앱 유지보수 및 개발을 진행했습니다.</p>
@@ -350,11 +355,16 @@
                 </div>
                 <div class="col-md-9 col-12">
                   <h4>BNK IB / RMS 운영 및 고도화</h4>
-                  <i class="gray">분석 / 설계 / 개발</i>
+                  <i class="gray">분석 / 설계 / 개발 (개발 3명)</i>
                   <ul class="pt-3">
-                    <li>IB 프로젝트 하자보수 참여<small> (개발 2명)</small></li>
+                    <!-- <li>IB 프로젝트 하자보수 참여<small> (개발 2명)</small></li>
                     <li>IB 고도화 프로젝트 참여 (신규 보고서 개발)<small> (개발 3명)</small></li>
                     <li>RMS 시스템 유지보수</li>
+                    <li>서버 관리 및 쿼리 튜닝</li>
+                    <li>인프라, Oracle 데이터베이스 유지보수 및 관리</li> -->
+                    <li>RMS(리스크) 및 IB 시스템 서버/DB 인프라 관리, 신규 리포트 개발 주도</li>
+                    <li>Batch Job 구축 및 쿼리 튜닝, 장애 발생 시 신속 원인분석 및 조치</li>
+                    <li>신규 보고서 개발을 통해 유관부서 요구사항 처리시간 200% 단축</li>
                     <li>서버 관리 및 쿼리 튜닝</li>
                     <li>인프라, Oracle 데이터베이스 유지보수 및 관리</li>
                     <li><strong>Skill Keywords</strong></li>
@@ -390,12 +400,17 @@
                 </div>
                 <div class="col-md-9 col-12">
                   <h4>쎌바이오텍 유지보수 및 개발</h4>
-                  <i class="gray">분석 / 개발</i>
+                  <i class="gray">분석 / 개발 (운영 2명)</i>
                   <ul class="pt-3">
-                    <li>유지보수 및 고도화<small> (운영 2명)</small></li>
+                    <!-- <li>유지보수 및 고도화<small> (운영 2명)</small></li>
                     <li>admin 비밀번호 정책에 따른 비밀번호 변경 안내 로직 구현현</li>
                     <li>락토클리어 이니시스 결제 취소 및 에스크로 결제 구현현</li>
-                    <li>듀오락 상품 정보 전송 빅인 api 개발 및 spring batch 연동</li>
+                    <li>듀오락 상품 정보 전송 빅인 api 개발 및 spring batch 연동</li> -->
+                    <li>Admin 보안 정책(비밀번호 정책·알림) 및 결제 취소·에스크로 기능 신규 개발</li>
+                    <li>B2B 연동(빅인 API) 배치 데이터 전송 및 결제 프로세스 개선</li>
+                    <li>이니시스 결제 취소 및 에스크로 연동 도입 → 월간 결제 오류 30% 감소</li>
+                    <li>배치 연동(BIGIN API) 자체 설계/구현하여 상품 정보 자동화 100% 달성</li>
+                    <li>비밀번호 변경 알림 로직 개선으로 웹 취약점 해소 및 잠금 문의 25% 감소</li>
                     <li><strong>Skill Keywords</strong></li>
                     <div>
                       <span class="badge badge-secondary">spring boot Framework</span>
@@ -428,9 +443,9 @@
                 </div>
                 <div class="col-md-9 col-12">
                   <h4>인천창업플랫폼</h4>
-                  <i class="gray">분석 / 개발</i>
+                  <i class="gray">분석 / 개발 (운영1명)</i>
                   <ul class="pt-3">
-                    <li>유지보수 <small> (운영1명)</small></li>
+                    <li>유지보수</li>
                     <li>인천창업플랫폼(pc / admin) 사이트의 기능 오류 및 개선 사항 개발</li>
                     <li>파일 다운로드 및 엑셀 업로드 수정 등</li>
                     <li><strong>Skill Keywords</strong></li>
@@ -465,12 +480,16 @@
                 </div>
                 <div class="col-md-9 col-12">
                   <h4>LGU+ admin 개발</h4>
-                  <i class="gray">분석 / 설계 / 개발</i>
+                  <i class="gray">분석 / 설계 / 개발 (개발 2명)</i>
                   <ul class="pt-3">
-                    <li>개발<small> (개발 2명)</small></li>
+                    <!-- <li>개발<small> </small></li>
                     <li>react를 이용한 화면 개발</li>
                     <li>컴포넌트 개발</li>
-                    <li>spring boot 프레임워크를 이용한 Back-end</li>
+                    <li>spring boot 프레임워크를 이용한 Back-end</li> -->
+                    <li>React 기반 Admin UI 및 Spring Boot 백엔드 개발</li>
+                    <li>고객/기업 관리 컴포넌트 설계 및 테스트 주도</li>
+                    <li>Node 연동 관리 및 사용자 인터페이스 구축하여 운영팀 요청 프로세스 60% 단축</li>
+                    <li>Swagger 기반 API 문서 자동화로 QA/운영 커뮤니케이션 효율화</li>
                     <li><strong>Skill Keywords</strong></li>
                     <div>
                       <span class="badge badge-secondary">spring boot Framework</span>
@@ -502,15 +521,19 @@
                 </div>
                 <div class="col-md-9 col-12">
                   <h4>종근당 m-office(app) / 도매상 웹 발주 개발</h4>
-                  <i class="gray">분석 / 개발</i>
+                  <i class="gray">분석 / 개발 (운영 1명, 개발 2명)</i>
                   <ul class="pt-3">
-                    <li>유지보수 / 고도화<small> (운영 1명, 개발 2명)</small></li>
+                    <!-- <li>유지보수 / 고도화<small> (운영 1명, 개발 2명)</small></li>
                     <li>영업사원을 위한 고객관리. 결제 등 업무 앱 및 웹 인터페이스 유지보수 및 고도화</li>
                     <li>app 삼성페이 연동 및 인터페이스, NOTI 인터페이스 개발</li>
                     <li>도매상 결제내역서 양식 생성 및 pdf 생성</li>
                     <li>파일 다중 업로드 및 관리</li>
                     <li>app 동적 표 생성 후 화면 캡쳐 기능</li>
-                    <li>SAP 데이터 전송 인터페이스 개발</li>
+                    <li>SAP 데이터 전송 인터페이스 개발</li> -->
+                    <li>업무용 M-Office App 및 웹 발주, 동적표 Generation, SAP 연동</li>
+                    <li>파일 다중 업로드, 삼성페이 결제연동·인터페이스 신규설계 등 주도</li>
+                    <li>결제내역서 양식 자동작성/PDF화로 회계업무 소요시간 34% 감소</li>
+                    <li>동적 표 자동화/캡처 기능 개발로 영업지원팀 업무 프로세스 2건 자동화</li>
                     <li><strong>Skill Keywords</strong></li>
                     <div>
                       <span class="badge badge-secondary">Java</span>
@@ -543,13 +566,16 @@
                 </div>
                 <div class="col-md-9 col-12">
                   <h4>굿네이버스 해외결연아동시스템</h4>
-                  <i class="gray">분석 / 개발</i>
+                  <i class="gray">분석 / 개발 (운영 및 개발 1명)</i>
                   <ul class="pt-3">
                     <li>유지보수 / 고도화<small> (운영 및 개발 1명)</small></li>
-                    <li>해외아동을 위한 결연 시스템의 유지보수 및 고도화 작업</li>
-                    <li>신규 보고서 게시판 생성</li>
-                    <li>통계 수치 값 조정</li>
-                    <li>app 동기화 파일 연동</li>
+                    <!-- <li>해외아동을 위한 결연 시스템의 유지보수 및 고도화 작업</li> -->
+                    <!-- <li>신규 보고서 게시판 생성</li> -->
+                    <!-- <li>통계 수치 값 조정</li> -->
+                    <!-- <li>app 동기화 파일 연동</li> -->
+                    <li>해외아동 CMS 시스템 유지보수/통계 리포트 개발</li>
+                    <li>대용량 데이터 Sync 자동화 및 동기화 앱 연동 주도</li>
+                    <li>신규 리포트 생성 및 자동화를 통해 통계 데이터 처리속도 40% 향상</li>
                     <li><strong>Skill Keywords</strong></li>
                     <div>
                       <span class="badge badge-secondary">spring Framework</span>
