--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="user-scalable=no,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,width=device-width">
     <meta name="description" content=""/>
     <meta property="og:url" content="https://resume.yowu.dev" />
-    <meta property="og:site_name" content="이게 바로 요우의 이력서" />
-    <meta property="og:title" content="이게 바로 요우의 이력서" />
-    <meta property="og:description" content="사실 별볼일 없는 이력서입니다." />
+    <meta property="og:site_name" content="박성언 이력서" />
+    <meta property="og:title" content="박성언 이력서" />
+    <meta property="og:description" content="박성언 이력서입니다." />
     <meta property="og:image" content="https://github.com/paul3569/resume/static/image/profile_dame.jpg"/>
     <meta property="og:type" content="website" />
 
@@ -139,7 +139,7 @@
         <p>유로인스트투먼츠라는 회사에서는 짧은 기간이였지만 금융권에 대한 도메인 지식과 리스크 시스템을 이해하고 작은 프로젝트이지만 프로젝트를 요건 정의 부터 완료 보고까지 모든 과정에 참여해여 전체적인 프로젝트 흐름을 이해하였습니다.</p>
         <p>저는 항상 개발에 있어서 재미를 느끼고 도전적입니다. 여러 경험들을 통해서 실력을 키우고, 여러 사람들과 소통하고 싶습니다.</p>
         <p>감사합니다.</p>-->
-          <p class="text-md-right"><small>Latest Resume Updated</small> <span class="badge badge-secondary">2025. 07. 20</span></p>
+          <p class="text-md-right"><small>Latest Resume Updated</small> <span class="badge badge-secondary">2025. 12. 25</span></p>
           <p class="text-md-right">Park SungEon</p>
         </div>
       </div>
@@ -340,6 +340,44 @@
 
           <div class="row">
             <div class="col">
+
+
+              <div class="row">
+                <div class="col-md-3 col-12 text-md-right">
+                  <div class="row">
+                    <div class="col-md-12 col">
+                      <h4 class="gray">2025. 12 ~ <br /></h4>
+                    </div>
+                    <div class="col-md-12 col-3 text-center text-md-right">
+                        <span class="badge badge-info">~ ing</span>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-9 col-12">
+                  <h4>반려동물 산책 메이트</h4>
+                  <i class="gray">기획 / 분석 / 설계 / 개발 (2명)</i>
+                  <ul class="pt-3">
+                    <li>프로젝트 기획</li>
+                    <li>분석 / 설계 및 개발환경 구축</li>
+                    <li>MSA 아키텍처 채용 (Spring boot, React)</li>
+                    <li><strong>Skill Keywords</strong></li>
+                    <div>
+                      <span class="badge badge-secondary">MSA</span>
+                      <span class="badge badge-secondary">spring boot Framework</span>
+                      <span class="badge badge-secondary">Java</span>
+                      <span class="badge badge-secondary">html</span>
+                      <span class="badge badge-secondary">css</span>
+                      <span class="badge badge-secondary">javascript</span>
+                      <span class="badge badge-secondary">React</span>
+                      <span class="badge badge-secondary">mysql</span>
+                      <span class="badge badge-secondary">JPA</span>
+                      <span class="badge badge-secondary">swagger</span>
+                    </div>
+                  </ul>
+                </div>
+              </div>
+              <hr />
+
 
               <div class="row">
                 <div class="col-md-3 col-12 text-md-right">
@@ -890,10 +928,10 @@
               <div class="col">
                 <div class="row">
                   <div class="col-md-3 col-12 text-md-right">
-                    <h4 class="gray">2025. 05</h4>
+                    <h4 class="gray">2025. 12</h4>
                   </div>
                   <div class="col-md-9 col-12">
-                    <h4>정보처리기사(필기)</h4>
+                    <h4>정보처리기사</h4>
                     <i class="gray">한국산업인력공단</i>
                   </div>
                 </div>
@@ -1068,7 +1106,7 @@
           </a>
         </div>
         <div class="col-md-6 pt-3">
-          <button onClick="alert('뇌내망상 코너는 준비 중입니다.')" class="btn btn-dark btn-block" role="button" aria-pressed="true">
+          <button onClick="alert(' ')" class="btn btn-dark btn-block" role="button" aria-pressed="true">
             <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
             &nbsp;
           </button>
@@ -1080,8 +1118,8 @@
       <div class="row">
         <div class="col footer-cover">
           <div class="footer text-center">
-            <small>CSS by <a href="https://getbootstrap.com/" target="_blank">Bootstrap 4</a>. Thanks for <a href="https://blog.outsider.ne.kr/1234" target="_blank">Outsider</a></small><br/>
-            <small>Last Modified at 2025.02.21, <a href="https://github.com/paul3569/resume/master" target="_blank">Changelog. </a><a href="https://github.com/uyu423/resume" target="_blank"><i class="fa fa-github"></i> Github</a></small>
+            <small>CSS by <a href="https://getbootstrap.com/" target="_blank">Bootstrap 4</a>. Thanks for <a href="" target="_blank">Outsider</a></small><br/>
+            <small>Last Modified at 2025.12.25, <a href="https://github.com/paul3569/resume" target="_blank">Changelog. </a><a href="https://github.com/paul3569/resume" target="_blank"><i class="fa fa-github"></i> Github</a></small>
           </div>
         </div>
       </div>
